# corgi-logger

./: CMakeLists.txt  install.bat
cmake/: config.cmake.in
include/corgi/logger/: log.h
src/: log.cpp
tests/: CMakeLists.txt
tests/src/: LoggerTest.cpp
